--- a/pg-vite/src/css/Home.css
+++ b/pg-vite/src/css/Home.css
@@ -35,6 +35,7 @@
 }
 
 .right-home {
+  z-index: -1;
   grid-row: span 2;
   display: flex;
   justify-content: center;
